--- a/site/templates/twig/cart/lookup/form.twig
+++ b/site/templates/twig/cart/lookup/form.twig
@@ -4,23 +4,13 @@
 	page                   ProcessWire\Page
 #}
 
-<form action="{{ page.url }}" class="pt-3 px-3 allow-enterkey-submit" id="add-item-form">
+<form action="{{ page.url }}" class="pt-3 allow-enterkey-submit" id="add-item-form">
 	<input type="hidden" name="action" value="add-item">
 
 	<div class="row">
 		<div class="col-sm-3">
 			<div class="form-group">
-				{% include 'util/form/input-with-modal-lookup.twig' with {
-						'name': 'itemID', 'id': 'additemID', 'value': '', 'placeholder': 'Item ID',
-						'small': false,
-						'modaltarget': '#ajax-modal', 'modaldescription': 'Search for / Choose Item',
-						'attributes_button': {
-							'data-search': 'item',
-							'data-input': '#additemID',
-							'data-lookupurl': page.searchLookupUrl('items')
-						}
-					}
-				%}
+				{% include 'cart/lookup/form/input-itemid.twig' %}
 			</div>
 			<div class="mt-2">
 				<ul class="list-unstyled">
@@ -30,24 +20,20 @@
 					<li>
 						<small class="desc2"></small>
 					</li>
-					{% if page.config.company == 'provalley' %}
-						<li>
-							<small class="weight-desc collapse">Weight: <span class="item-weight"></span></small>
-						</li>
-					{% endif %}
 				</ul>
 			</div>
 		</div>
 		<div class="col-sm-1 text-right">
 			<div class="form-group">
-				{% include 'util/form/input.twig' with {
-						'type': 'number',
-						'name': 'qty', 'id': 'qty', 'value': '',
-						'class_input': 'form-control',
-						'class_add': [
-							'text-right',
-							'qty-input'
-						],
+				{% include 'util/bootstrap/form/input.twig' with {
+						'input': {
+							'name': 'qty',
+							'value': '',
+							'addclasses': [
+								'text-right',
+								'qty-input'
+							]
+						}
 					}
 				%}
 			</div>
