--- a/site/templates/twig/min/i2i/xref/form/key.twig
+++ b/site/templates/twig/min/i2i/xref/form/key.twig
@@ -76,7 +76,7 @@
 				}
 			}
 		%}
-		<small class="form-text text-muted description">{{ xref.parentItem().description }}</small>
-		<small class="form-text text-muted description2">{{ xref.parentItem().description2 }}</small>
+		<small class="form-text text-muted description">{{ xref.childItem().description }}</small>
+		<small class="form-text text-muted description2">{{ xref.childItem().description2 }}</small>
 	</div>
 </div>
