--- a/site/templates/twig/min/inmain/addm/xref/form.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form.twig
@@ -16,6 +16,12 @@
 			<button type="submit" class="btn btn-success">
 				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 			</button>
+
+			{% if xref.isNew() == false %}
+				<a href="{{ page.xrefDeleteUrl(item.itemid, xref.addonitemid) }}" class="btn btn-danger delete_button">
+					<i class="fa fa-trash" aria-hidden="true"></i> Delete
+				</a>
+			{% endif %}
 		{% endif %}
 		<a href="{{ page.xrefListUrl(addm.getRecordlockerKey(xref)) }}" class="btn btn-warning">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
