--- a/site/templates/twig/min/inmain/addm/xref/form/key.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form/key.twig
@@ -2,7 +2,7 @@
 	<div class="col-sm-4">
 		<label for="itemID">Item ID</label>
 	</div>
-	<div class="col-sm-8 itemid-parent">
+	<div class="col-sm-8 item-fields">
 		{% include 'util/bootstrap/form/input-group.twig' with {
 				'inputgroup': {
 					'type': 'prepend',
@@ -43,7 +43,7 @@
 	<div class="col-sm-4">
 		<label for="addonID">Child Item ID</label>
 	</div>
-	<div class="col-sm-8 itemid-parent">
+	<div class="col-sm-8 item-fields">
 		{% include 'util/bootstrap/form/input-group.twig' with {
 				'inputgroup': {
 					'type': 'prepend',
