FIX: update alert exists

--- a/site/templates/twig/min/inmain/addm/xref/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form/js/classes/Alerts.js.twig
@@ -11,7 +11,7 @@ class AddmAlerts {
 	xrefExists(itemID, addonID, callback) {
 		swal2.fire({
 			title: 'Add-on Item Exists',
-			text: 'Edit Item to Item ' + itemID + ' - '+ addonID +'?',
+			text: 'Edit ' + itemID + ' - '+ addonID +'?',
 			icon: 'question',
 			showCancelButton: true,
 			confirmButtonText: 'Yes'
