Addm twig documentation

--- a/site/templates/twig/min/inmain/addm/list/list.twig
+++ b/site/templates/twig/min/inmain/addm/list/list.twig
@@ -1,3 +1,11 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page(pw_template=addm)
+	input                  ProcessWire\WireInput
+	addm                   Dplus\Min\Inmain\Addm\Addm
+	xrefs                  Propel\Runtime\Util\PropelModelPager (ItemAddonItem[])
+#}
 <div class="table-responsive">
 	<table class="table table-sm">
 		<thead>
