--- a/site/templates/twig/min/inmain/addm/list/display.twig
+++ b/site/templates/twig/min/inmain/addm/list/display.twig
@@ -1,3 +1,11 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page(pw_template=addm)
+	input                  ProcessWire\WireInput
+	addm                   Dplus\Min\Inmain\Addm\Addm
+	xrefs                  Propel\Runtime\Util\PropelModelPager (ItemAddonItem[])
+#}
 <div class="card">
 	<div class="card-body">
 		{% include 'min/inmain/addm/list/search.twig' with {'q' : input.get.text('q')} %}
