--- a/site/templates/twig/min/inmain/addm/xref/display.twig
+++ b/site/templates/twig/min/inmain/addm/xref/display.twig
@@ -1,3 +1,11 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page(pw_template=addm)
+	input                  ProcessWire\WireInput
+	addm                   Dplus\Min\Inmain\Addm\Addm
+	xref                   ItemAddonItem
+#}
 <div class="card">
 	<div class="card-body">
 		<div class="row">
