--- a/site/templates/twig/min/inmain/addm/xref/form/key.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form/key.twig
@@ -1,3 +1,11 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page(pw_template=addm)
+	input                  ProcessWire\WireInput
+	addm                   Dplus\Min\Inmain\Addm\Addm
+	xref                   ItemAddonItem
+#}
 {% set configIn = page.wire('modules').get('Dconfigs').config('in') %}
 
 <div class="row form-group">
