FIX: allow form submit

--- a/site/templates/twig/min/inmain/addm/xref/form/.js.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form/.js.twig
@@ -111,7 +111,7 @@ $(function() {
 			$('#loading-modal').modal('show');
 
 			if ($(form).data('new') === false) {
-				// form.submit();
+				form.submit();
 				return true;
 			}
 
@@ -129,7 +129,7 @@ $(function() {
 					});
 				}
 				if (exists === false) {
-					// form.submit();
+					form.submit();
 				}
 			});
 		}
