FIX: add autofocus

--- a/site/templates/twig/min/inmain/addm/xref/form/key.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form/key.twig
@@ -29,7 +29,8 @@
 							'aria-label':  'Item ID',
 							'tabindex': xref.itemid ? '-1' : '',
 							'data-itemid': xref.itemid,
-							'data-updates': 'description,description2'
+							'data-updates': 'description,description2',
+							'autofocus': xref.itemid == ''
 						}
 					},
 					'button': {
