Add Link to addm

--- a/site/templates/twig/items/itm/xrefs/xrefs-table.twig
+++ b/site/templates/twig/items/itm/xrefs/xrefs-table.twig
@@ -61,7 +61,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td>Add-On Items</td>
+		<td><a href="{{ page.xrefUrlAddm(item.itemid) }}" class="link">Add-On Items</a></td>
 		<td>
 			{{ item.count_addonitems() }} Records
 		</td>
