--- a/site/templates/twig/min/inmain/addm/xref/form.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form.twig
@@ -14,25 +14,30 @@
 	</div>
 
 	<div class="d-flex justify-content-between align-items-center">
-		{#
-			Only show Edit Actions if the Item is
-			1. Locked for editing by the User
-			2. Is a new Item
-			NOTE: Only show delete if item already exists.
-		#}
-		{% if addm.recordlocker.userHasLocked(addm.getRecordlockerKey(xref)) or xref.isNew() %}
-			<button type="submit" class="btn btn-success">
-				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
-			</button>
+		{% block crud_actions %}
+			{#
+				Only show Edit Actions if the Item is
+				1. Locked for editing by the User
+				2. Is a new Item
+				NOTE: Only show delete if item already exists.
+			#}
+			{% if addm.recordlocker.userHasLocked(addm.getRecordlockerKey(xref)) or xref.isNew() %}
+				<button type="submit" class="btn btn-success">
+					<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
+				</button>
 
-			{% if xref.isNew() == false %}
-				<a href="{{ page.xrefDeleteUrl(item.itemid, xref.addonitemid) }}" class="btn btn-danger delete_button">
-					<i class="fa fa-trash" aria-hidden="true"></i> Delete
-				</a>
+				{% if xref.isNew() == false %}
+					<a href="{{ page.xrefDeleteUrl(item.itemid, xref.addonitemid) }}" class="btn btn-danger delete_button">
+						<i class="fa fa-trash" aria-hidden="true"></i> Delete
+					</a>
+				{% endif %}
 			{% endif %}
-		{% endif %}
-		<a href="{{ page.xrefListUrl(addm.getRecordlockerKey(xref)) }}" class="btn btn-warning">
-			<i class="fa fa-times" aria-hidden="true"></i> Close
-		</a>
+		{% endblock %}
+		
+		{% block exit_button %}
+			<a href="{{ page.xrefListUrl(addm.getRecordlockerKey(xref)) }}" class="btn btn-warning">
+				<i class="fa fa-times" aria-hidden="true"></i> Close
+			</a>
+		{% endblock %}
 	</div>
 </form>
