FIX: Re-validate field after loading code

--- a/site/templates/twig/code-tables/mpo/cnfm/js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/js.twig
@@ -79,7 +79,7 @@ $(function() {
 					data: {
 						jqv: 'true',
 						new: function() {
-							return formCode.inputs.form.attr('data-code') ? 'false' : 'true';
+							return formCode.inputs.form.attr('data-code') == $('#code').val() ? 'false' : 'true';
 						},
 					}
 				}
