--- a/site/templates/twig/code-tables/mpo/cnfm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/js/classes/Form.js.twig
@@ -21,6 +21,8 @@ class CnfmForm {
 			this.inputs.code.val(json.code);
 			this.inputs.code.attr('readonly', 'true');
 			this.inputs.description.val(json.description);
+			var validator = this.inputs.form.validate();
+			validator.element('#' + this.inputs.code.attr('id'));
 			return true;
 		}
 		this.inputs.form.attr('data-code', '');
