FIX: change Add-on to Add-On

--- a/site/templates/twig/min/inmain/addm/list/list.twig
+++ b/site/templates/twig/min/inmain/addm/list/list.twig
@@ -20,7 +20,7 @@
 					</a>
 				</th>
 				<th class="py-2">
-					<a href="{{ page.get_sortURL('addonitemid') }}" class="link">Add-on Item
+					<a href="{{ page.get_sortURL('addonitemid') }}" class="link">Add-On Item
 						{% if page.orderby_column == 'addonitemid' %}
 							<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
 						{% endif %}
