--- a/site/templates/twig/min/inmain/addm/xref/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form/js/classes/Alerts.js.twig
@@ -10,7 +10,7 @@ class AddmAlerts extends Alerts {
 
 	xrefExists(itemID, addonID, callback) {
 		swal2.fire({
-			title: 'Add-on Item Exists',
+			title: 'Add-On Item Exists',
 			text: 'Edit ' + itemID + ' - '+ addonID +'?',
 			icon: 'question',
 			showCancelButton: true,
