--- a/site/templates/twig/min/inmain/addm/xref/form/key.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form/key.twig
@@ -53,7 +53,7 @@
 </div>
 <div class="row form-group">
 	<div class="col-sm-4">
-		<label for="addonID">Add-on Item ID</label>
+		<label for="addonID">Add-On Item ID</label>
 	</div>
 	<div class="col-sm-8 item-fields">
 		{% include 'util/bootstrap/form/input-group.twig' with {
