--- a/site/templates/twig/code-tables/mpo/cnfm/js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/js.twig
@@ -89,7 +89,7 @@ $(function() {
 			}
 		},
 		messages: {
-			code: "Please check the Code value (Max Length: {{ max_length_code }})",
+			code: "Please check the Code value (Max Length: {{ formCode.config.fields.code.maxlength }})",
 		},
 		submitHandler: function(form) {
 			var formCode = CnfmForm.getInstance();
