--- a/site/templates/twig/code-tables/mpm/dcm/js/classes/Requests.js.twig
+++ b/site/templates/twig/code-tables/mpm/dcm/js/classes/Requests.js.twig
@@ -18,7 +18,6 @@ class DcmRequests {
 	}
 
 	validateCodeUrl() {
-		return '{{ page.jsonApiUrl('mpm/validate/dcm/') }}';
+		return '{{ page.jsonApiUrl('mpm/validate/dcm/pr-workcenter/') }}';
 	}
-
 }
