FEAT: get code using ajax

--- a/site/templates/twig/code-tables/mpm/dcm/.js.twig
+++ b/site/templates/twig/code-tables/mpm/dcm/.js.twig
@@ -43,8 +43,11 @@ $(function() {
 						var modal = input.closest('.modal');
 
 						if (editCode) {
-							var button = $('button[data-code="'+code+'"]');
-							formCode.updateInputsFromJson(button.data('json'));
+							server.getCode(code, function(response) {
+								if (response) {
+									formCode.updateInputsFromJson(response);
+								}
+							});
 						} else {
 							modal.modal('hide');
 						}
@@ -105,14 +108,17 @@ $(function() {
 						form.submit();
 						return true;
 					}
-					
+
 					alert.codeExists(code, function(editCode) {
 						if (editCode) {
 							var modal = formCode.form.closest('.modal');
 
 							if (editCode) {
-								var button = $('button[data-code="'+code+'"]');
-								formCode.updateInputsFromJson(button.data('json'));
+								server.getCode(code, function(response) {
+									if (response) {
+										formCode.updateInputsFromJson(response);
+									}
+								});
 							} else {
 								modal.modal('hide');
 							}
