--- a/site/templates/twig/code-tables/mpm/dcm/.js.twig
+++ b/site/templates/twig/code-tables/mpm/dcm/.js.twig
@@ -141,5 +141,13 @@ $(function() {
 		form.find('.is-valid').removeClass("is-valid");
 		form.find('.invalid-feedback').remove();
 		form.find('.valid-feedback').remove();
+
+		if (form.attr('data-code')) {
+			$('#code-table-alert').remove();
+			$('.bg-success').removeClass('bg-success text-white');
+			$('.highlight').removeClass('highlight');
+			$('[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
+			$('html, body').animate({scrollTop: $('[data-code="'+form.attr('data-code')+'"]').offset().top,},700,'linear');
+		}
 	});
 })
