--- a/site/templates/twig/code-tables/list.twig
+++ b/site/templates/twig/code-tables/list.twig
@@ -6,7 +6,7 @@
 #}
 {% set response = manager.getResponse() %}
 
-<div class="list-group codes-list">
+<div class="list-group codes-list mb-3">
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
 			<div class="col-3">
