--- a/site/templates/twig/code-tables/mpo/cnfm/form.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/form.twig
@@ -5,12 +5,12 @@
 
 	<div class="form-group">
 		<label for="code">Code</label>
-		<input type="text" name="code" class="form-control" maxlength="{{ cnfm.codeMaxLength() }}" value="" id="code">
+		<input type="text" name="code" class="form-control" maxlength="{{ cnfm.fieldAttribute('code', 'maxlength') }}" value="" id="code">
 	</div>
 
 	<div class="form-group">
 		<label for="description">Description</label>
-		<input type="text" name="description" class="form-control" maxlength="20" id="description">
+		<input type="text" name="description" class="form-control" maxlength="{{ cnfm.fieldAttribute('description', 'maxlength') }}" id="description">
 	</div>
 
 	<div class="d-flex justify-content-between align-items-center">
